<resources>
    <string name="app_name">ProvaEmbrionale</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title">INSERISCI ESERCIZIO</string>
    <string name="saveButton">SAVE</string>
    <string name="Exercise">Inserisci Esercizio</string>
    <string name="Reps">Inserisci Serie E Ripetizioni</string>
    <string name="Weight">Inserisci Peso</string>
    <string name="item_name">ESERCIZIO</string>
    <string name="item_rep">RIPETIZIONI</string>
    <string name="item_peso">PESO</string>
    <string name="Delete">Delete</string>
    <string name="Edit">Edit</string>
    <string name="goto_list">Scheda</string>
    <string name="no_button">NO</string>
    <string name="text_alert">SEI SICURO DI VOLER ELIMINARE?</string>
    <string name="yes_button">SI</string>
    <string name="item_pesor">PESO</string>
    <string name="item_restr">PAUSA</string>
    <string name="ADD">aggiungi</string>
    <string name="battiti">BATTITI</string>
    <string name="ore_di_sonno">ORE DI SONNO</string>
    <string name="intensita">INTENSITA</string>
    <string name="spiegazione">SPIEGAZIONE</string>
    <string name="spiegazionebutt">SPIEGAZIONE</string>
    <string name="timer">TIMER</string>
    <string name="_00_00">00:00</string>
    <string name="start">START</string>
    <string name="reset">RESET</string>
    <string name="play">play</string>
    <string name="restart">restart</string>
    <string name="imagex">TODO</string>
    <string name="video">VIDEO</string>
    <string name="le_mie_schede">LE MIE SCHEDE</string>
    <string name="giovedi">GIOVEDI\'</string>
    <string name="mercoledi">MERCOLEDI\'</string>
    <string name="martedi">MARTEDI\'</string>
    <string name="lunedi">LUNEDI\'</string>
    <string name="venerdi">VENERDI\'</string>
    <string name="domenica">DOMENICA</string>
    <string name="sabato">SABATO</string>
    <string name="inserisci_nome_scheda">INSERISCI NOME SCHEDA</string>
    <string name="salva">SALVA</string>
    <string name="calcolo_settimana_scarico">Calcolo Settimana Scarico</string>
    <string name="inserisci_media_battiti">Inserisci Media Battiti</string>
    <string name="inserisci_ore_di_sonno">Inserisci Ore Di Sonno</string>
    <string name="intensit_allenamento_da_1_a_10">Intensità Allenamento Da 1 a 10</string>
    <string name="inserisci_data">Inserisci Data</string>
    <string name="inserisci_pausa_in_secondi">Inserisci Pausa in SECONDI</string>
    <string name="registrati">Registrati</string>
</resources>