<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:layout_height="match_parent"
    tools:context=".ActivityTimer">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/text_countdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"></TextView>

    <TextView
        android:id="@+id/text_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="276dp"
        android:gravity="center_horizontal"
        android:text="@string/_00_00"
        android:textColor="@color/white"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <ImageButton
        android:id="@+id/button_start"
        android:layout_width="110dp"
        android:layout_height="79dp"
        android:layout_marginTop="4dp"
        android:background="@null"
        android:contentDescription="@string/play"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_play_circle_24"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_countdown"></ImageButton>

    <ImageButton
        android:id="@+id/button_reset"
        android:layout_width="110dp"
        android:layout_height="79dp"
        android:layout_marginTop="4dp"

        android:background="@null"
        android:contentDescription="@string/restart"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_restart_alt_24"
        android:text="@string/reset"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.717"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_countdown"
        tools:visibility="visible"></ImageButton>
</androidx.constraintlayout.widget.ConstraintLayout>