<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo10"

    android:id="@+id/drawer_layout"
    tools:context=".ActivitySchede">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <include
            layout="@layout/main_toolbar">

        </include>


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"

            android:text="@string/le_mie_schede"
            android:textSize="45sp"
            android:textStyle="bold">

        </TextView>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:id="@+id/button_lunedi"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/lunedi"

            android:background="@drawable/rectangle"



            android:textSize="25sp">

        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:id="@+id/button_martedi"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:background="@drawable/rectangle"
            android:text="@string/martedi"
            android:textSize="25sp">

        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:id="@+id/button_mercoledi"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:text="@string/mercoledi"
            android:textSize="25sp">

        </androidx.appcompat.widget.AppCompatButton>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:id="@+id/button_giovedi"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:text="@string/giovedi"
            android:textSize="25sp">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:background="@drawable/rectangle"
            android:id="@+id/button_verdi"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:text="@string/venerdi"
            android:textSize="25sp">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:id="@+id/button_sabato"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/rectangle"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/sabato"
            android:textSize="25sp">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:id="@+id/button_domenica"
            android:textColor="@color/white"
            android:background="@drawable/rectangle"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/domenica"
            android:textSize="25sp">

        </androidx.appcompat.widget.AppCompatButton>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:paddingLeft="5dp"
            android:paddingTop="8dp"
            android:paddingRight="5dp"
            android:text="CLICCARE SUL GIORNO DELLA SETTIMANA PER CREARE LA PROPRIA SCHEDA, TENERE PEMUTO SUL PULSANTE DELLA SCHEDA PER RINOMINARLA.">

        </TextView>




    </LinearLayout>
    </ScrollView>





    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">

        <include
            layout="@layout/main_nav_drawer"> </include>


    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>