<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="5dp"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/item_data"
                android:text="DATA"
                android:textColor="@color/black"

                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/item_battiti"
                android:text="@string/battiti"
                android:layout_marginTop="6dp"
                android:layout_below="@+id/item_data"
                android:textColor="@color/black"

                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/item_sonno"
                android:text="@string/ore_di_sonno"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="6dp"

                android:layout_below="@+id/item_battiti"
                android:paddingTop="4dp"
                android:layout_height="wrap_content"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/item_intensità"
                android:text="@string/intensita"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="6dp"

                android:layout_below="@+id/item_sonno"
                android:paddingTop="4dp"
                android:layout_height="wrap_content"></TextView>


            <TableRow

                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_alignBottom="@+id/item_intensità">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/editButtonSC"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/ic_baseline_edit_24"
                    android:contentDescription="@string/Edit">

                </androidx.appcompat.widget.AppCompatButton>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/deleteButtonSC"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="15dp"
                    android:background="@android:drawable/ic_delete"
                    android:backgroundTint="@color/design_default_color_error"
                    android:contentDescription="@string/Delete">

                </androidx.appcompat.widget.AppCompatButton>



            </TableRow>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>