<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="25dp"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/text_alert"
                android:layout_centerHorizontal="true"
                android:padding="6dp"
                android:textSize="20sp"

                android:text="@string/text_alert"
                android:layout_height="wrap_content"></TextView>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/no_button"
                android:textColor="@color/white"
                android:background="@android:color/holo_red_light"
                android:layout_below="@+id/text_alert"
                android:text="@string/no_button">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_red_light"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:layout_alignParentRight="true"
                android:id="@+id/yes_button"
                android:layout_below="@+id/text_alert"
                android:text="@string/yes_button">

            </androidx.appcompat.widget.AppCompatButton>



        </RelativeLayout>



    </androidx.cardview.widget.CardView>

</LinearLayout>